child-monitoring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "react-test-service"
  namespace: support
spec:
  selector:
    app: "react-test"
  ports:
    - port: 3000
  type: ClusterIP
